<resources>
    <string name="app_name">Vital Transformation</string>
    <string name="image">image</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_account_login">Already have account login?</string>
    <string name="reach_your_potential">Reach your potential</string>
    <string name="vital">VITAL</string>
    <string name="transformation">" TRANSFORMATION"</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="enter_email_address_or_phone_number">Enter email or mobile number</string>
    <string name="login">Sign In</string>
    <string name="new_user_register_now">New User,
        <u>Be A Member</u>
    </string>
    <string name="your_name">Your Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="press_back_to_exit">Press back again to exit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="home">Home</string>
    <string name="online_classes">Online Classes</string>
    <string name="classes_1">Classes - %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="events">Events</string>
    <string name="latest_classes">Latest Classes</string>
    <string name="view_all_classes">View All Classes</string>

    <string name="network_error">Please check your network</string>
    <string name="no_result">No result found.</string>
</resources>
