<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:fillViewport="true">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/splash_background"
            android:layout_height="wrap_content"
            tools:context=".activity.SplashActivity">

        <ImageView
                android:id="@+id/imgLogo"
                android:src="@drawable/logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:contentDescription="@string/image"
                android:layout_width="150dp"
                android:layout_height="150dp"/>

        <LinearLayout
                android:id="@+id/linAppName"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:fontFamily="@font/caudex_bold"
                    android:textColor="@color/black"
                    android:text="@string/vital"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/caudex_bold"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/transformation"/>
        </LinearLayout>

        <TextView
                android:id="@+id/tagLine"
                app:layout_constraintTop_toBottomOf="@+id/linAppName"
                android:layout_marginTop="50dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/caudex_regular"
                android:text="@string/reach_your_potential"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/accountLogin"
                app:layout_constraintTop_toBottomOf="@+id/tagLine"
                android:layout_marginTop="70dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_light"
                android:textSize="10sp"
                android:text="@string/already_have_account_login"
                android:layout_height="wrap_content"/>

        <Button
                style="@style/MyButtonSmall"
                android:id="@+id/getStarted"
                app:layout_constraintTop_toBottomOf="@+id/accountLogin"
                android:layout_marginTop="@dimen/common_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/get_started"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>