<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_background"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".activity.LoginActivity">

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/linAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vital"
                        android:fontFamily="@font/caudex_bold"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transformation"
                        android:fontFamily="@font/caudex_bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"/>
            </LinearLayout>

            <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:contentDescription="@string/image"
                    android:src="@drawable/logo"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linAppName"/>

            <LinearLayout
                    android:id="@+id/linForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgLogo">

                <EditText
                        android:id="@+id/email"
                        style="@style/MyEditText"
                        android:text="w3wall@gmail.com"
                        android:hint="@string/enter_email_address_or_phone_number"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/poppins_light"
                        tools:targetApi="o"/>

                <EditText
                        android:id="@+id/password"
                        style="@style/MyEditText"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:hint="@string/prompt_password"
                        android:text="lucky1989"
                        android:fontFamily="@font/poppins_light"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        tools:targetApi="o"/>

                <Button
                        android:id="@+id/email_sign_in_button"
                        style="@style/MyButtonSmall"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/login"/>
            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                    android:id="@+id/constraintNewUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/new_user_register_now"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textSize="12sp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/linForm">

                <TextView
                        android:id="@+id/newUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_user_register_now"
                        android:fontFamily="@font/poppins_light"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/imgRightArrow"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                <ImageView
                        android:id="@+id/imgRightArrow"
                        android:contentDescription="@string/image"
                        android:layout_width="wrap_content"
                        app:layout_constraintLeft_toRightOf="@+id/newUser"
                        app:layout_constraintTop_toTopOf="parent"
                        android:paddingTop="2dp"
                        android:layout_margin="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_double_right"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>