<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardCornerRadius="@dimen/corner_radius"
            android:layout_margin="@dimen/text_view_padding">

        <ImageView
                android:id="@+id/imgBackground"
                android:contentDescription="@string/image"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/shape_rounded_corner"
                android:layout_height="match_parent"/>

        <android.support.constraint.ConstraintLayout
                android:id="@+id/ConstraintDetails"
                android:layout_width="match_parent"
                android:background="@drawable/shape_rounded_corner"
                android:layout_height="match_parent"
                android:gravity="end"
                android:padding="@dimen/common_margin"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/online_classes"
                    android:maxLines="2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/classes"
                    android:textColor="@color/white"
                    app:layout_constraintVertical_bias="1.0"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="18sp"
                    app:layout_constraintWidth_percent=".8"/>

            <TextView
                    android:id="@+id/classes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/classes_1"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/white"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>